--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ button:hover {
   }
 }
 
-#autoplayModal {
+#autoplayModal, #loadingModal {
   display: none;
   position: fixed;
   top: 0;
@@ -254,4 +254,20 @@ button:hover {
   color: #fff;
   border: none;
   cursor: pointer;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 4px solid #fff;
+  border-bottom-color: #4da6ff;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 20px auto;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
